refactoring, fixes. connect external libraries

--- a/NUServer.Manage.WASM/Layout/MainLayout.razor
+++ b/NUServer.Manage.WASM/Layout/MainLayout.razor
@@ -1,5 +1,21 @@
 ﻿@inherits LayoutComponentBase
 
-<main>
-    @Body
-</main>
+
+<div class="bb-page">
+
+    <Sidebar2 @ref="sidebar"
+             IconName="IconName.BootstrapFill"
+             Title="Blazor Bootstrap"
+             DataProvider="SidebarDataProvider" />
+
+    <main>
+        <div class="bb-top-row px-4 d-flex justify-content-end">
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        </div>
+
+        <article class="content px-4">
+            <div class="py-2">@Body</div>
+        </article>
+    </main>
+
+</div>
