--- a/NUServer.Manage.WASM/Pages/_Imports.razor
+++ b/NUServer.Manage.WASM/Pages/_Imports.razor
@@ -1,7 +1,5 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
-@using Microsoft.AspNetCore.Components
-@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
@@ -9,3 +7,4 @@
 @using NUServer.Manage.WASM
 @using BlazorBootstrap
 @using Microsoft.AspNetCore.Authorization
+@using NUServer.Manage.WASM.Layout
