--- a/NUServer.Manage.WASM/Pages/_Imports.razor
+++ b/NUServer.Manage.WASM/Pages/_Imports.razor
@@ -8,3 +8,4 @@
 @using BlazorBootstrap
 @using Microsoft.AspNetCore.Authorization
 @using NUServer.Manage.WASM.Layout
+@using NUServer.Manage.WASM.Components.Form
