--- a/NUServer.Manage.WASM/Components/Identity/RedirectToLoginComponent.razor
+++ b/NUServer.Manage.WASM/Components/Identity/RedirectToLoginComponent.razor
@@ -2,7 +2,7 @@
 @code {
     protected override void OnInitialized()
     {
-        navigationManager.NavigateTo("login");
+        navigationManager.NavigateTo("signin");
         base.OnInitialized();
     }
 }
