--- a/NUServer.Manage.WASM/Layout/MainLayout.razor
+++ b/NUServer.Manage.WASM/Layout/MainLayout.razor
@@ -11,6 +11,7 @@
     <main>
         <div class="bb-top-row px-4 d-flex justify-content-end">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a class="btn-link pointer-event" @onclick="Logout">Sign out</a>
         </div>
 
         <article class="content px-4">
