--- a/NUServer.Manage.WASM/Pages/Identity/SignInPage.razor
+++ b/NUServer.Manage.WASM/Pages/Identity/SignInPage.razor
@@ -4,12 +4,15 @@
 <PageTitle>SignInPage</PageTitle>
 
 <div class="text-center identity-page">
-    <EditForm class="form-signin">
+    <FormComponent class="form-signin" Model="requestData" OnSubmit="onSubmit">
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+        <ValidationSummary></ValidationSummary>
+
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" @bind-value="requestData.Email">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" @bind-value="requestData.Password">
         @* <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
@@ -18,5 +21,5 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p>Not registered? <a href="signup">Click here!</a></p>
         <p class="mt-5 mb-3 text-muted">© @DateTime.Now.Year</p>
-    </EditForm>
+    </FormComponent>
 </div>
