--- a/NUServer.Manage.WASM/wwwroot/managestyles/app.css
+++ b/NUServer.Manage.WASM/wwwroot/managestyles/app.css
@@ -15,6 +15,10 @@ a, .btn-link {
     color: #0071c1;
 }
 
+a {
+    cursor: pointer;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
