--- a/NU.SimpleClient/App.axaml
+++ b/NU.SimpleClient/App.axaml
@@ -1,8 +1,8 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="NU.SimpleClient.App">
+             x:Class="NU.SimpleClient.App"
+             RequestedThemeVariant="Light">
 	<Application.Styles>
-		<FluentTheme Mode="Light"/>
-
+		<FluentTheme />
 	</Application.Styles>
 </Application>
